--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -20,7 +20,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:background="@color/lightGrey"
-                android:layout_height="450dp">
+                android:layout_height="400dp">
 
                 <ImageView
                     android:id="@+id/pic"
@@ -183,10 +183,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Add to Cart"
+                    android:text="Thêm vào Giỏ hàng!"
                     android:drawableStart="@drawable/btn_3"
                     android:drawableTint="@color/white"
-                    android:textSize="20dp"
+                    android:textSize="15dp"
                     android:paddingStart="16dp"
                     android:layout_marginVertical="16dp"
                     android:layout_marginEnd="16dp"
